--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,24 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* REGOLE GENERALI */
+.box {
+    background-color: #006cfa;
+    width: 100%;
+    height: 50px;
+    border: 1px solid white;
+    color: white;
+    text-align: center;
+    padding: 10px;
+}
+
+.sub-box {
+    background-color: #00e165;
+    width: 100%;
+    height: 30px;
+    border: 1px solid white;
+    color: white;
+    text-align: center;
+    padding-top: 5px;
+}
